fixed loading on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1012,6 +1012,12 @@ input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placehold
 			width: 100%;
 			min-height: 100vh;
 	}
+
+		 .cs-main .right-section{
+			position: relative;
+			width: 100%;
+			min-height: 100vh;
+	}
 }
 
 
